fix: restructure loan options section with responsive design and enhance styling for better readability

--- a/style.css
+++ b/style.css
@@ -147,3 +147,31 @@ img {
   border-radius: 10px;
   max-width: fit-content;
 }
+
+.container {
+  position: relative;
+  text-align: center;
+  color: rgb(239, 237, 235);
+  line-height: 1.3;
+  text-shadow: 0 0 4px #100000;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+* {
+  box-sizing: border-box;
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
